# langchain

./: README.md  pyproject.toml
RAG/: 1a_rag_basics.py
chains/: 2_chains_under_the_hood.py  3_chains_extended.py  4_chain_parallel.py  5_chains_branching.py  chains_basic.py
chat_models/: chat_model_basics.py  chat_model_save_history_firebase.py  real_time_conversation.py
prompt_templates/: prompt_template_basic.py  prompt_template_with_chat_model.py
